<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login information</string>
    <string name="title_login_button_login"> Login </string>
    <string name="confirm_exit_title"> Exit confirmation </string>
    <string name="confirm_exit_message"> Are you sure you want to exit? </string>
    <string name="confirm_exit_yes"> YES </string>
    <string name="confirm_exit_NO"> NO </string>
    <string name="title_employee">Employee\n</string>
    <string name="title_customer">Customer</string>
    <string name="title_product">Product</string>
    <string name="title_order">Category</string>
    <string name="title_warehouse">Warehouse</string>
    <string name="title_bill">Bill</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_blog">Blog</string>
    <string name="title_transport">Transport</string>
    <string name="title_report">Report</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_heathcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_AdvancedProduct">Advanced Product</string>
    <string name="title_new_customer">New customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customerdetail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_add_product">Add product</string>
    <string name="title_update_product">Update Product</string>
    <string name="title_view_product">View Product</string>
    <string name="title_quality_control">Quality Control</string>
    <string name="title_compare_product">Compare Product</string>
    <string name="title_add_product_category">Add Product Category</string>
    <string name="title_export_data">Export Data</string>
    <string name="title_product_detail">PRODUCT DETAIL</string>
    <string name="title_category_id">Category ID:</string>
    <string name="title_product_id">Product ID:</string>
    <string name="title_product_name">Product Name:</string>
    <string name="title_product_quantity">Product Quantity:</string>
    <string name="title_product_price">Product Price:</string>
    <string name="title_product_image_id">Product Image ID:</string>
    <string name="title_paymentmethod">Payment Method</string>
    <string name="title_orders">Orders</string>
    <string name="title_ordersdetails">ORDER DETAILS</string>
    <string name="title_orderid">"ORDER ID: "</string>
    <string name="title_totalvalue">TOTAL VALUE:</string>
    <string name="title_productname">Product Name</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_unitprice">Unit Price</string>
    <string name="title_discount">Discount</string>
    <string name="title_total">Total Value</string>
    <string name="title_telephony">Telephony</string>
    <string name="title_contactname">Contact Name</string>
    <string name="title_phonenumber">Phone Number</string>
    <string name="title_body">BODY</string>


</resources>