<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_product"
        android:title="@string/title_add_product" />
    <item
        android:id="@+id/menu_update_product"
        android:title="@string/title_update_product" />
    <item
        android:id="@+id/menu_view_product"
        android:title="@string/title_view_product" />
    <item
        android:id="@+id/menu_quality_control"
        android:title="@string/title_quality_control" />
    <item
        android:id="@+id/menu_compare_product"
        android:title="@string/title_compare_product" />
    <item
        android:id="@+id/menu_add_product_category"
        android:title="@string/title_add_product_category" />
    <item
        android:id="@+id/menu_export_data"
        android:title="@string/title_export_data" />
</menu>