<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_employee" />

                <TextView
                    android:id="@+id/txtEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_employee"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_customer" />

                <TextView
                    android:id="@+id/txtCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:text="@string/title_customer"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_product" />

                <TextView
                    android:id="@+id/txtProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_product"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAdvancedProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_order" />

                <TextView
                    android:id="@+id/txtAdvancedProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_AdvancedProduct"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_paymentmethod" />

                <TextView
                    android:id="@+id/txtPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_paymentmethod"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_order" />

                <TextView
                    android:id="@+id/txtOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_orders"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_voucher" />

                <TextView
                    android:id="@+id/txtVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_voucher"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgBlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_blog" />

                <TextView
                    android:id="@+id/txtBlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_blog"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgTransport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_transport" />

                <TextView
                    android:id="@+id/txtTransport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_transport"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_report" />

                <TextView
                    android:id="@+id/txtReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_report"
                    android:textAlignment="center"
                    android:textColor="#3ED07D"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </TableRow>

    </TableLayout>
</ScrollView>