<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendSMSActivity">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_contactname"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#5E35B1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_phonenumber"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTelephonyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#3949AB"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDEB9A"
        android:text="@string/title_body"
        android:textAlignment="center"
        android:textColor="#F4511E"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtBody"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgSendSms1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms1" />

        <ImageView
            android:id="@+id/imgSendSms2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_sendsms2" />
    </LinearLayout>
</LinearLayout>